<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Asha</string>
    <string name="app_name_caps">ASHA</string>
    <string name="tab_projects">Projects</string>
    <string name="title_projects">Asha Projects</string>
    <string name="label_project_type">Type:</string>
    <string name="label_project_funded_by">Funded By:</string>
    <string name="label_project_focus">Focus:</string>
    <string name="label_project_2nd_focus">And:</string>
    <string name="label_project_purpose">Purpose:</string>
    <string name="label_project_chapter">Chapter:</string>
    <string name="label_project_year">Year:</string>
    <string name="label_project_funds">Funding:</string>
    <string name="label_project_area">Area:</string>
    <string name="label_project_description">Description:</string>

    <string name="title_project_details">Project Details</string>
    <string name="cta_donate">Donate</string>

    <string name="cta_more_projects">Load More Projects...</string>

    <string name="tab_events">Events</string>
    <string name="label_event_address">At:</string>
    <string name="cta_more_events">Load More Events...</string>

    <string name="title_event_details">Event Details</string>
    <string name="cta_get_tickets">Get Tickets</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_title">Asha</string>
    <string name="nav_title_find">Find:</string>

    <string name="title_login">Volunteer/Admin Login</string>
    <string name="label_username">AshaNet Parse.com Username:</string>
    <string name="hint_username">username</string>
    <string name="label_password">Password:</string>
    <string name="hint_password">password</string>
    <string name="cta_login">Log In</string>
    <string name="global_action_login">Log In</string>
    <string name="global_action_logout">Log Out</string>
    <string name="msg_logged_in">Logged in as %s</string>

    <string name="title_about">About Asha</string>
    <string name="title_loading">Loading Data</string>

    <string name="splash_subtitle">BRINGING HOPE THROUGH EDUCATION</string>
    <string name="donate_subtitle">DONATE</string>
    <string name="title_pay_via">PAY WITH</string>

    <string name="copy_disclaimer">Note: Donations made through this
      form are tax-deductible (only) in the US under Section 501(c)(3)
      of the IRS Code.</string>

    <string name="cta_generic">CONTINUE</string>

    <string name="copy_rsvp_promise">WE\'LL SIGN YOU UP!</string>

    <string name="field_enter">WHAT\'S YOUR</string>
    <string name="hint_email">E-MAIL?</string>
    <string name="cta_rsvp">SUBMIT</string>

    <string name="title_stream">Asha</string>

    <string name="symbol_clam">$</string>
    <string name="icon_rsvp">RSVP</string>
</resources>
