<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/rlStream"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@drawable/respond_bg"
   >

  <TextView
     android:id="@+id/tvAmount"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:layout_centerVertical="true"
     android:layout_centerHorizontal="true"
     android:text="@string/field_enter"
     style="@style/rsvp_title"
     />

  <EditText
     android:id="@+id/etEmail"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:text="@string/title_pay_via"
     android:layout_marginLeft="32dp"
     android:layout_marginRight="32dp"
     android:layout_below="@id/tvAmount"
     style="@style/rsvp_edit"
     />

  <TextView
     android:id="@+id/tvPromise"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:layout_centerHorizontal="true"
     android:text="@string/copy_rsvp_promise"
     android:layout_below="@id/etEmail"
     style="@style/rsvp_title"
     />

  <Button
     android:id="@+id/btnContinue"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_alignParentLeft="true"
     android:text="cta_rsvp"
     style="@style/button_cta"
     />

</RelativeLayout>
