<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@color/white_smoke"
   >

  <!-- call to action -->
  <Button
     android:id="@+id/btnDonate"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:layout_alignParentBottom="true"
     android:typeface="sans"
     android:textSize="16sp"
     android:textColor="@color/dodger_blue"
     android:background="@color/powder_blue"
     android:text="@string/cta_donate"
     />

  <!-- Android supports crappy layout too, using TableLayout -->
  <TableLayout
     android:id="@+id/tlDetails"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
     >

    <TableRow android:layout_gravity="left">
      <TextView
         android:id="@+id/tvTypeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginLeft="8dp"
         android:text="@string/label_project_type"
         android:typeface="sans"
         android:textSize="12sp"
         android:textColor="@color/black"
         />
      <TextView
         android:id="@+id/tvTypeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginLeft="16dp"
         android:typeface="sans"
         android:textSize="12sp"
         android:textColor="@color/black"
         />
    </TableRow>

    <TableRow android:layout_gravity="left">
      <TextView
         android:id="@+id/tvFocusLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginLeft="8dp"
         android:text="@string/label_project_focus"
         android:typeface="sans"
         android:textSize="12sp"
         android:textColor="@color/black"
         />
      <TextView
         android:id="@+id/tvFocus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginLeft="16dp"
         android:typeface="sans"
         android:textSize="12sp"
         android:textColor="@color/black"
         />
    </TableRow>
    <TableRow android:layout_gravity="left">
      <TextView
         android:id="@+id/tvPurposeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginLeft="8dp"
         android:text="@string/label_project_purpose"
         android:typeface="sans"
         android:textSize="12sp"
         android:textColor="@color/black"
         />
      <TextView
         android:id="@+id/tvPurpose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginLeft="8dp"
         android:typeface="sans"
         android:textSize="12sp"
         android:textColor="@color/black"
         />
    </TableRow>
    <TableRow android:layout_gravity="left">
      <TextView
         android:id="@+id/tvChapterLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginLeft="8dp"
         android:text="@string/label_project_chapter"
         android:typeface="sans"
         android:textSize="12sp"
         android:textColor="@color/black"
         />
      <TextView
         android:id="@+id/tvChapter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginLeft="20dp"
         android:typeface="sans"
         android:textSize="12sp"
         android:textColor="@color/black"
         />
    </TableRow>
  </TableLayout>

  <TextView
     android:id="@+id/tvYearLabel"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/tlDetails"
     android:layout_alignParentLeft="true"
     android:layout_marginTop="4dp"
     android:layout_marginLeft="8dp"
     android:text="@string/label_project_year"
     android:typeface="sans"
     android:textSize="12sp"
     android:textColor="@color/black"
     />
  <TextView
     android:id="@+id/tvYear"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/tlDetails"
     android:layout_toRightOf="@id/tvYearLabel"
     android:layout_marginTop="4dp"
     android:layout_marginLeft="20dp"
     android:typeface="sans"
     android:textSize="12sp"
     android:textColor="@color/black"
     />
  <TextView
     android:id="@+id/tvAreaLabel"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/tlDetails"
     android:layout_toRightOf="@id/tvYear"
     android:layout_marginTop="4dp"
     android:layout_marginLeft="8dp"
     android:text="@string/label_project_area"
     android:typeface="sans"
     android:textSize="12sp"
     android:textColor="@color/black"
     />
  <TextView
     android:id="@+id/tvArea"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/tlDetails"
     android:layout_toRightOf="@id/tvAreaLabel"
     android:layout_marginTop="4dp"
     android:layout_marginLeft="20dp"
     android:typeface="sans"
     android:textSize="12sp"
     android:textColor="@color/black"
     />

  <TextView
     android:id="@+id/tvDescriptionLabel"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@id/tvYear"
     android:layout_alignParentLeft="true"
     android:layout_marginTop="4dp"
     android:layout_marginLeft="8dp"
     android:text="@string/label_project_description"
     android:typeface="sans"
     android:textSize="16sp"
     android:textColor="@color/black"
     />

  <ScrollView
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_below="@id/tvDescriptionLabel"
     android:layout_alignParentLeft="true"
     android:layout_alignParentRight="true"
     android:layout_above="@id/btnDonate"
     >
    <TextView
       android:id="@+id/tvDescription"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:layout_marginLeft="8dp"
       android:typeface="sans"
       android:textSize="14sp"
       android:textColor="@color/black"
       />
  </ScrollView>
  
</RelativeLayout>
