<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/rlStream"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@drawable/respond_bg"
   >

  <!-- floating subtitle -->
  <TextView
     android:id="@+id/tvTitle"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
     android:layout_marginTop="96dp"
     android:layout_marginLeft="20dp"
     android:text="@string/donate_subtitle"
     style="@style/donate_title"
     />

  <LinearLayout
     android:id="@+id/llAmount"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:layout_centerVertical="true"
     android:layout_centerHorizontal="true"
     android:layout_gravity="center"
     android:orientation="vertical"
     >

    <EditText
       android:id="@+id/etAmount"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:layout_gravity="center"
       android:hint="$20"
       android:inputType="numberDecimal"
       style="@style/donate_amount"
       />

    <TextView
       android:id="@+id/tvPayWith"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:layout_gravity="center"
       android:text="@string/title_pay_via"
       style="@style/donate_subtitle"
       />

  </LinearLayout>

  <!-- payment method selection -->
  <ImageButton
     android:id="@+id/ibPayByCCRadio"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_marginLeft="32dp"
     android:layout_marginTop="16dp"
     android:layout_below="@id/llAmount"
     android:src="@drawable/radio_selected"
     android:background="#33333333"
     />

  <ImageView
     android:id="@+id/ivPayByCCTitle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_toRightOf="@id/ibPayByCCRadio"
     android:layout_alignBottom="@id/ibPayByCCRadio"
     android:layout_marginLeft="32dp"
     android:src="@drawable/icon_cc"
     android:background="#66666666"
     />

  <ImageButton
     android:id="@+id/ibPayByPPRadio"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_marginLeft="32dp"
     android:layout_marginTop="16dp"
     android:layout_below="@id/ibPayByCCRadio"
     android:src="@drawable/radio_deselected"
     android:background="#88888888"
     />

  <ImageView
     android:id="@+id/ivPayByPPTitle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_toRightOf="@id/ibPayByPPRadio"
     android:layout_alignBottom="@id/ibPayByPPRadio"
     android:layout_marginLeft="32dp"
     android:src="@drawable/paypal_coral"
     android:background="#aaaaaaaa"
     />

  <!-- complete payment button -->
  <Button
     android:id="@+id/btnContinue"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_alignParentLeft="true"
     android:layout_marginLeft="24dp"
     android:layout_marginBottom="20dp"
     android:text="@string/cta_generic"
     style="@style/button_cta"
     />

  <TextView
     android:id="@+id/tvFinePrint"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_above="@id/btnContinue"
     android:text="@string/copy_disclaimer"
     android:layout_marginLeft="24dp"
     android:layout_marginRight="24dp"
     android:layout_marginBottom="8dp"
     style="@style/donate_fineprint"
     />

</RelativeLayout>
